@@ -1,3 +1,7 @@
+January 23, 2026 - **v4.2.3**
+                Compatibility with cryoSPARC versions with additional names (ie v4.7.x-cuda12)
+                Add symmetry relaxation to HomoRef, NURef protocols
+
 April 22, 2025  - **v4.2.2**
                 Compatibility with cryoSPARC v4.7.0
 
